force-app/main/default/objects/EYI_Leasing__c/EYI_Leasing__c.object-meta.xml
<CustomObject>
    <label>Leasing</label>
    <nameField>
        <displayFormat>LS-{000000}</displayFormat>
        <label>Leasing No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leasings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>