force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Agreement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Agreement_End_Date__c</fullName>
    <label>Agreement End Date</label>
    <type>Date</type>
</CustomField>