force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>EYI_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>