force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Agreement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Agreement_Start_Date__c</fullName>
    <label>Agreement Start Date</label>
    <type>Date</type>
</CustomField>