force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Carpet_Area_Required_Sqft__c.field-meta.xml
<CustomField>
    <fullName>EYI_Carpet_Area_Required_Sqft__c</fullName>
    <label>Carpet Area Required Sqft</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>