force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Country__c.field-meta.xml
<CustomField>
    <fullName>EYI_Country__c</fullName>
    <formula>TEXT(EYI_Opportunity__r.EYI_Country__c )</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>