force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Deposit__c.field-meta.xml
<CustomField>
    <fullName>EYI_Deposit__c</fullName>
    <label>Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>