force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Escalation_Commercial__c.field-meta.xml
<CustomField>
    <fullName>EYI_Escalation_Commercial__c</fullName>
    <label>Escalation %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>