force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Escalation_Frequency__c.field-meta.xml
<CustomField>
    <fullName>EYI_Escalation_Frequency__c</fullName>
    <label>Escalation Frequency (Months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>