force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Escalation_Residential__c.field-meta.xml
<CustomField>
    <fullName>EYI_Escalation_Residential__c</fullName>
    <label>Escalation (Residential)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>