force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Gas_Reading__c.field-meta.xml
<CustomField>
    <fullName>EYI_Gas_Reading__c</fullName>
    <label>Gas Reading</label>
    <length>40</length>
    <type>Text</type>
</CustomField>