force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Lease_End_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lease_End_Date__c</fullName>
    <label>Lock in End Date</label>
    <type>Date</type>
</CustomField>