force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Leasing_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Leasing_Status__c</fullName>
    <label>Leasing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leased</fullName>
                <default>true</default>
                <label>Leased</label>
            </value>
            <value>
                <fullName>Vacated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>