force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>EYI_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Leasings</relationshipLabel>
    <relationshipName>Leasings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>