force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Other_Lock_In_Period__c.field-meta.xml
<CustomField>
    <fullName>EYI_Other_Lock_In_Period__c</fullName>
    <label>Other Lock in Period (Months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>