force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Owner_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>EYI_Owner_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Leasings (Owner Opportunity)</relationshipLabel>
    <relationshipName>Leasings1</relationshipName>
    <type>Lookup</type>
</CustomField>