force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Period__c.field-meta.xml
<CustomField>
    <fullName>EYI_Period__c</fullName>
    <label>Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>