force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Project__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>EYI_Project__c</referenceTo>
    <relationshipLabel>Leasings</relationshipLabel>
    <relationshipName>Leasings</relationshipName>
    <type>Lookup</type>
</CustomField>