force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Property_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Property_Type__c</fullName>
    <formula>TEXT(EYI_Project__r.EYI_Project_Property_Type__c )</formula>
    <label>Property Type</label>
    <type>Text</type>
</CustomField>