force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Proposal_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Proposal_Date__c</fullName>
    <label>Walk-in Date</label>
    <type>Date</type>
</CustomField>