force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Reading_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Reading_Date__c</fullName>
    <label>Reading Date</label>
    <type>Date</type>
</CustomField>