force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Rent_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Rent_Type__c</fullName>
    <label>Rent Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>