force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Rent_Value__c.field-meta.xml
<CustomField>
    <fullName>EYI_Rent_Value__c</fullName>
    <label>Monthly Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>