force-app/main/default/objects/EYI_Leasing__c/fields/EYI_Saleable_Area__c.field-meta.xml
<CustomField>
    <fullName>EYI_Saleable_Area__c</fullName>
    <label>Saleable Area in Sqft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>