force-app/main/default/objects/EYI_Leasing__c/fields/MSEB_Meter_Reading__c.field-meta.xml
<CustomField>
    <fullName>MSEB_Meter_Reading__c</fullName>
    <label>MSEB Meter Reading</label>
    <length>40</length>
    <type>Text</type>
</CustomField>