force-app/main/default/objects/EYI_Leasing__c/validationRules/Inventory_should_be_of_same_project.validationRule-meta.xml
<ValidationRule>
    <fullName>Inventory_should_be_of_same_project</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( EYI_Inventory__c )),
     EYI_Project__c &lt;&gt; EYI_Inventory__r.EYI_Project__c 
)</errorConditionFormula>
    <errorDisplayField>EYI_Inventory__c</errorDisplayField>
    <errorMessage>Please select valid inventory.</errorMessage>
</ValidationRule>