force-app/main/default/objects/EYI_Leasing__c/validationRules/Inventory_should_be_selected_for_leased.validationRule-meta.xml
<ValidationRule>
    <fullName>Inventory_should_be_selected_for_leased</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISNEW(),
    ISPICKVAL( EYI_Inventory__r.EYI_Leasing_Status__c ,&quot;Leased Out&quot;)

)</errorConditionFormula>
    <errorDisplayField>EYI_Inventory__c</errorDisplayField>
    <errorMessage>Please select valid inventory. This inventory is already Leased Out.</errorMessage>
</ValidationRule>