force-app/main/default/objects/EYI_Leasing__c/validationRules/Verify_Leasing_Start_Date_is_not_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Verify_Leasing_Start_Date_is_not_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(EYI_Leasing_Status__c, &quot;Leased&quot;),
    ISBLANK(EYI_Lease_Start_Date__c)
)</errorConditionFormula>
    <errorDisplayField>EYI_Lease_Start_Date__c</errorDisplayField>
    <errorMessage>Please enter valid Lease Start Date.</errorMessage>
</ValidationRule>